integration-guide/v3/web-integration/s2s-netbanking.mdx
---
title: "S2S Net Banking Payment"
description: "Accept net banking payments server-to-server with EximPe — get an ACS redirect template directly from your backend"
---

# Introduction

The Server-to-Server (S2S) Net Banking integration lets you initiate net banking payments entirely from your backend. EximPe returns an ACS (Access Control Server) template that you render in the customer's browser, which automatically redirects them to their bank's net banking portal to authorise the payment.

<CardGroup cols={3}>
  <Card title="18+ Banks Supported" icon="university" href="#supported-banks">
    SBI, HDFC, ICICI, Axis, Kotak and many more
  </Card>
  <Card title="ACS Redirect" icon="arrow-right-arrow-left" href="#step-2-render-acs-template">
    Seamlessly redirect customers to their bank's portal via Base64-encoded HTML
  </Card>
  <Card title="Real-time Callbacks" icon="server" href="#step-4-server-to-server-callback">
    Receive instant payment status updates via server-to-server webhooks
  </Card>
</CardGroup>

## Prerequisites

Before you begin, ensure you have:

- **Credentials**: Your Client ID and Client Secret
- **Domain Whitelist**: Whitelisted your website domain in the EximPe dashboard
- **Webhook URL**: A secure endpoint to receive payment status updates
- **Callback URL**: A publicly accessible URL configured in your EximPe dashboard for server-to-server callbacks
- **HTTPS Endpoint**: All S2S endpoints must be served over HTTPS

The following steps allow you to integrate S2S net banking payments:

1. **Initiate payment** with the customer's selected bank code
2. **Render the ACS template** to redirect the customer to their bank
3. **Check payment transaction status**
4. **EximPe sends Server-to-Server callback response**

## Step 1: Initiate Payment

Send a `POST` request to the Create Order endpoint with `collection_mode` set to `"s2s"` and `mop_type` set to `"net_banking"`. Include the customer's chosen bank code in `netbanking_details`.

```bash
POST /pg/orders/
```

```json
{
  "amount": "1000.00",
  "currency": "INR",
  "reference_id": "S2SNB_REF123",
  "return_url": "https://yoursite.com/payment/callback/",
  "collection_mode": "s2s",
  "mop_type": "net_banking",
  "netbanking_details": {
    "bank_name": "Axis Bank"
  },
  "buyer": {
    "name": "John Doe",
    "email": "john.doe@example.com",
    "phone": "+919876543210",
    "address": {
      "line_1": "123 Main Street",
      "line_2": "Apt 4B",
      "city": "Mumbai",
      "state": "Maharashtra",
      "postal_code": "400001"
    },
    "ip_address": "192.168.1.100",
    "user_agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36"
  },
  "product": {
    "name": "Sample Product",
    "description": "This is a sample product description",
    "hs_code": "98051000",
    "hs_code_description": "Portable automatic data processing machines",
    "type_of_goods": "physical_goods"
  },
  "invoice": {
    "number": "INV_NB001",
    "date": "2025-09-04"
  }
}
```

<Note>
  Required parameters for S2S Net Banking:

  - `collection_mode`: must be `"s2s"`
  - `mop_type`: must be `"net_banking"`
  - `netbanking_details.bank_name`: name of the selected bank (see [Supported Banks](#supported-banks))
  - `buyer.ip_address`: customer's device IP address (used for fraud prevention)
  - `buyer.user_agent`: customer's browser user-agent string (used for fraud prevention)
</Note>

### Request Headers

```bash
X-Client-ID: YOUR_CLIENT_ID
X-Client-Secret: YOUR_CLIENT_SECRET
X-Merchant-ID: YOUR_MERCHANT_ID   # Required for PSP merchants
X-API-Version: 3.0.0
Content-Type: application/json
```

### Response

```json
{
  "success": true,
  "message": "S2S Net Banking Payment Request created successfully",
  "data": {
    "order_id": "OD9123456789",
    "acs_template": "PGh0bWw+PGJvZHk+PGZvcm0gbmFtZT0icGF5bWVudF9wb3N0..."
  }
}
```

- `order_id`: Unique order identifier for tracking the transaction
- `acs_template`: Base64-encoded HTML form that redirects the customer to their bank's net banking portal

## Step 2: Render ACS Template

Decode the Base64 `acs_template` and render it in the customer's browser. The embedded form auto-submits and takes the customer directly to their bank's authentication page.

```javascript
function handleACSTemplate(acsTemplate) {
  // Decode Base64 HTML
  const decodedHTML = atob(acsTemplate);

  // Open in a new window or write into the current page
  const authWindow = window.open('', 'NetBanking_Auth', 'width=800,height=600');
  authWindow.document.write(decodedHTML);
  authWindow.document.close();

  // Poll for window close (customer completed / cancelled payment)
  const checkClosed = setInterval(() => {
    if (authWindow.closed) {
      clearInterval(checkClosed);
      checkPaymentStatus();
    }
  }, 1000);
}
```

<Warning>
  Always decode and render the ACS template in a secure HTTPS context. Never modify the decoded HTML before rendering — doing so may break the bank redirect.
</Warning>

## Step 3: Check Payment Transaction Status

Use the Order Status API to retrieve the current payment status:

```bash
curl -X GET https://api-pacb.eximpe.com/pg/orders/{order_id}/status/ \
  -H "X-Client-ID: YOUR_CLIENT_ID" \
  -H "X-Client-Secret: YOUR_CLIENT_SECRET" \
  -H "X-Merchant-ID: YOUR_MERCHANT_ID" \
  -H "X-API-Version: 3.0.0"
```

<Note>
  For detailed parameters and response formats, see the [Get Order API](/api-reference/v3/order/get)
</Note>

### Payment Status Values

| Status | Description |
|--------|-------------|
| `payment_pending` | Payment initiated, awaiting completion |
| `payment_successful` | Payment completed successfully |
| `failed` | Payment failed or was declined |

## Step 4: Server-to-Server Callback Response

EximPe sends real-time webhook notifications when payment status changes:

```json
{
    "event_type": "PAYMENT_SUCCESSFUL",
    "event_time": "2024-02-15 16:53:15",
    "version": "1.0",
    "sequence_number": "e40552bf-ed12-4f35-9a97-162d97e6fa34",
    "data": {
        "status": "captured",
        "message": "Payment successful",
        "mop_type": "net_banking",
        "order_id": "OD9123456789",
        "payment_id": "PR6938527534",
        "bank_ref_num": "OD9123456789-PR6938527534",
        "payment_completed_at": "2025-06-24T12:30:44.000000Z"
    }
}
```

For more webhook details, see:
- [Payment Successful](/api-reference/v3/webhooks/payment-successful)
- [Payment Failed](/api-reference/v3/webhooks/payment-failed)

## Supported Banks

Pass the **Bank Name** value in `netbanking_details.bank_name` when initiating the payment.

| Bank Name | Payment Method Code |
|-----------|---------------------|
| Axis Bank | NB_AXIS |
| Bank of India | NB_BOI |
| Bank of Maharashtra | NB_BOM |
| Central Bank Of India | NB_CBI |
| Corporation Bank | NB_CORP |
| Development Credit Bank | NB_DCB |
| Federal Bank | NB_FED |
| HDFC Bank | NB_HDFC |
| ICICI Netbanking | NB_ICICI |
| Industrial Development Bank of India | NB_IDBI |
| Indian Bank | NB_INDB |
| IndusInd Bank | NB_INDUS |
| Indian Overseas Bank | NB_IOB |
| Jammu and Kashmir Bank | NB_JNK |
| Karnataka Bank | NB_KARN |
| Karur Vysya | NB_KVB |
| State Bank of Bikaner and Jaipur | NB_SBBJ |
| State Bank of Hyderabad | NB_SBH |
| State Bank of India | NB_SBI |
| State Bank of Mysore | NB_SBM |
| State Bank of Travancore | NB_SBT |
| South Indian Bank | NB_SOIB |
| Union Bank of India | NB_UBI |
| United Bank Of India | NB_UNIB |
| Vijaya Bank | NB_VJYB |
| Yes Bank | NB_YESB |
| CityUnion | NB_CUB |
| Canara Bank | NB_CANR |
| State Bank of Patiala | NB_SBP |
| Citi Bank NetBanking | NB_CITI |
| Deutsche Bank | NB_DEUT |
| Kotak Bank | NB_KOTAK |
| Dhanalaxmi Bank | NB_DLS |
| ING Vysya Bank | NB_ING |
| Andhra Bank | NB_ANDHRA |
| Punjab National Bank CORPORATE | NB_PNBCORP |
| Punjab National Bank | NB_PNB |
| Bank of Baroda | NB_BOB |
| Catholic Syrian Bank | NB_CSB |
| Oriental Bank Of Commerce | NB_OBC |
| Standard Chartered Bank | NB_SCB |
| Tamilnad Mercantile Bank | NB_TMB |
| Saraswat Bank | NB_SARASB |
| Syndicate Bank | NB_SYNB |
| UCO Bank | NB_UCOB |
| Bank of Baroda Corporate | NB_BOBCORP |
| Allahabad Bank | NB_ALLB |
| Bank of Bahrain and Kuwait | NB_BBKM |
| Janata Sahakari Bank | NB_JSB |
| Lakshmi Vilas Bank Corporate | NB_LVBCORP |
| Lakshmi Vilas Bank Retail | NB_LVB |
| North Kanara GSB | NB_NKGSB |
| Punjab and Maharashtra Coop Bank | NB_PMCB |
| Punjab and Sind Bank | NB_PNJSB |
| Ratnakar Bank | NB_RATN |
| Royal Bank of Scotland | NB_RBS |
| Shamrao Vithal Coop Bank | NB_SVCB |
| Tamil Nadu State Apex Coop Bank | NB_TNSC |
| DENA Bank | NB_DENA |
| COSMOS Bank | NB_COSMOS |
| DBS Bank Ltd | NB_DBS |
| DCB BANK Business | NB_DCBB |
| SVC Cooperative Bank | NB_SVC |
| Bharat Bank | NB_BHARAT |
| Karur Vysya Corporate Banking | NB_KVBCORP |
| Union Bank Corporate Banking | NB_UBICORP |
| IDFC Bank | NB_IDFC |
| The Nainital Bank | NB_NAIB |
| Airtel Payments Bank | NB_AIRTEL |

## Error Handling

| Error | Description | Resolution |
|-------|-------------|------------|
| `BANK_UNAVAILABLE` | Bank's net banking portal is down | Retry later or ask customer to choose another bank |
| `SESSION_EXPIRED` | Net banking session timed out | Re-initiate the payment |
| `PAYMENT_DECLINED` | Bank rejected the transaction | Customer should check account balance or try another bank |
| `INVALID_BANK_NAME` | Unrecognised bank name | Use a valid name from the [Supported Banks](#supported-banks) list |
| `NETWORK_ERROR` | Connectivity issue | Retry the request |

## Next Steps

- **Test Integration**: Use bank code `3333` with sandbox credentials to validate your flow
- **Go Live**: Switch to production credentials after thorough testing
- **Monitor**: Track success rates and error patterns via your EximPe dashboard

For additional support, see the [API Reference](/api-reference/v3/) or contact our integration team.
